[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["Meng Zhao <shizhaojingszj@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"
glom = "^22.1.0"
pdbpp = "^0.10.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
